demo-app-v3/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app-v3
  labels:
    app: demo-app-v3
    version: v3
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: demo-app-v3
    weight: 100
  wildcardPolicy: None
